# az-easy-ai-search

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: deploy_app.py  prompts.py  rag_chat.py
jint_search_pipelines/: AzureSearchPipelineBase.py  HybridSearchPipeline.py  HybridSemanticOCRSearchPipeline.py  HybridSemanticSearchPipeline.py  OCRImageSearchPipeline.py  VectorSearchPipeline.py  __init__.py
